[package]
name = "playerctl"
version = "0.1.0"
edition = "2021"
description = "A simple library to run playerctl commands from rust."
license = "MIT"
repository = "https://github.com/arlohb/playerctl-rs"
keywords = ["playerctl", "media", "music"]
categories = ["api-bindings", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
